--- a/assembler/Makefile
+++ b/assembler/Makefile
@@ -6,11 +6,21 @@
 #    By: fgracefo <fgracefo@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/12/01 17:56:20 by dmetallo          #+#    #+#              #
-#    Updated: 2020/12/01 20:54:33 by fgracefo         ###   ########.fr        #
+#    Updated: 2020/12/02 16:36:34 by fgracefo         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME 	=	asm
+
+# ----- Colors -----
+BLACK:="\033[1;30m"
+RED:="\033[1;31m"
+GREEN:="\033[1;32m"
+CYAN:="\033[1;35m"
+PURPLE:="\033[1;36m"
+WHITE:="\033[1;37m"
+EOC:="\033[0;0m"
+# ==================
 
 SRC 	=	src/adding.c \
 			src/adding2.c \
@@ -57,13 +67,17 @@ FLAGS		=	-Wall -Wextra -Werror -g
 all: $(NAME)
 
 %.o: %.c
+				@echo $(PURPLE) " - Compiling $< into $@" $(EOC)
 				@gcc -c $< -o $@ $(INC_FLAG) $(FLAGS)
 
 $(OP_O): $(OP_C) ../common/op.h
+				@echo $(PURPLE) " - Compiling $< into $@" $(EOC)
 				@gcc -c $< -o $@ $(INC_FLAG) $(FLAGS)
 
 $(NAME): $(LIBDIR)libft.a $(PRINTF_DIR)libftprintf.a $(ALL_OBJ) $(OP_O)
+				@echo $(CYAN) " - Compiling $(NAME)" $(EOC)
 				@gcc $(FLAGS) $(ALL_OBJ) $(OP_O) -o $(NAME) -L $(LIBDIR) -lft -L $(PRINTF_DIR) -lftprintf
+				@echo $(GREEN) " - OK" $(EOC)
 
 $(PRINTF_DIR)libftprintf.a: ft_printf
 
@@ -76,12 +90,14 @@ libft:
 				@make -C $(LIBDIR)
 
 clean:
+				@echo $(RED) " - Removing $(NAME) object files" $(EOC)
 				@make -C $(PRINTF_DIR) clean
 				@make -C $(LIBDIR) clean
 				@rm -rf $(ALL_OBJ)
 				@rm -rf $(OP_O)
 
 fclean:
+				@echo $(RED) " - Removing $(NAME)" $(EOC)
 				@make -C $(PRINTF_DIR) fclean
 				@make -C $(LIBDIR) fclean
 				@make clean
